tests/NormalTests/paczka1/fuzzy1/65506717.err
Error in line 4: A563 A437 64,1
Error in line 20: lUsYE7iE A563 16,2
Error in line 26: TlM S101 8,2
Error in line 34: hlEheUx S848 53,3
